Fix alignment

--- a/donut-shop/styles.css
+++ b/donut-shop/styles.css
@@ -98,6 +98,10 @@ li.old-fashioned a {
     margin: 0;
 }
 
+#dmm {
+    margin: 0 auto;
+}
+
 #dmm-middle {
     background-color: #eee;
     border-radius: 15px;
